UI changed and more features added

--- a/app/src/main/res/drawable/nav_background.xml
+++ b/app/src/main/res/drawable/nav_background.xml
@@ -3,4 +3,5 @@
 
     <solid android:color="#fff"/>
     <corners android:topLeftRadius="12dp" android:topRightRadius="12dp"/>
+    <stroke android:width="2.5dp" android:color="#BDBDBD"/>
 </shape>
