--- a/app/src/main/res/layout/customedialog.xml
+++ b/app/src/main/res/layout/customedialog.xml
@@ -20,12 +20,15 @@
 
         <ProgressBar
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            />
         <TextView
+            android:id="@+id/msg"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Please wait.."
             android:textStyle="bold"
+            android:fontFamily="@font/doppio_one"
             android:textColor="#2196F3"
             android:textAlignment="center"
             android:layout_marginTop="30dp"/>
