--- a/app/src/main/res/layout/fulldescription.xml
+++ b/app/src/main/res/layout/fulldescription.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#EDEDED"
-    tools:context=".Ads_fullDescription">
+    tools:context=".Activities.Ads_fullDescription">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -51,7 +51,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_marginStart="10dp"
-                android:fontFamily="sans-serif-light"
+                android:fontFamily="@font/doppio_one"
                 android:paddingTop="5dp"
                 android:text="Product Name"
                 android:textAlignment="textStart"
@@ -81,7 +81,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="50dp"
                 android:layout_marginEnd="50dp"
-                android:fontFamily="sans-serif-light"
+                android:fontFamily="@font/doppio_one"
                 android:text="Product Price"
                 android:textAlignment="center"
                 android:textColor="#009688"
@@ -115,7 +115,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="15dp"
-                    android:fontFamily="sans-serif-light"
+                    android:fontFamily="@font/doppio_one"
                     android:text="RENT"
                     android:textColor="#4CAF50"
                     android:textSize="30dp"
@@ -126,7 +126,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="15dp"
                     android:layout_marginEnd="90dp"
-                    android:fontFamily="sans-serif-light"
+                    android:fontFamily="@font/doppio_one"
                     android:text="Product Description :"
                     android:textColor="#FA6602"
                     android:textSize="20dp"
@@ -144,7 +144,7 @@
                     android:layout_marginStart="15dp"
                     android:layout_marginEnd="15dp"
                     android:layout_marginBottom="10dp"
-                    android:fontFamily="sans-serif-light"
+                    android:fontFamily="@font/doppio_one"
                     android:paddingTop="10dp"
                     android:text="Product Description"
                     android:textColor="#050505"
@@ -172,7 +172,7 @@
                 android:layout_height="30dp"
                 android:layout_marginStart="10dp"
                 android:layout_weight="1"
-                android:fontFamily="sans-serif-light"
+                android:fontFamily="@font/doppio_one"
                 android:text="Phone"
                 android:textColor="#028FFF"
                 android:textSize="20dp" />
@@ -202,6 +202,7 @@
                     android:layout_weight=".4"
                     android:clickable="true"
                     android:focusable="true"
+                    android:elevation="10dp"
                     android:longClickable="true"
                     android:src="@drawable/pohon"
                     tools:ignore="OnClick" />
@@ -210,9 +211,8 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="140dp"
+            android:layout_height="match_parent"
             android:layout_marginTop="4dp"
-            android:layout_marginBottom="5dp"
             android:background="#fff"
             android:orientation="vertical">
 
@@ -221,7 +221,7 @@
                 android:layout_height="match_parent"
                 android:layout_marginStart="10dp"
                 android:layout_weight="1"
-                android:fontFamily="sans-serif-light"
+                android:fontFamily="@font/doppio_one"
                 android:text="Name"
                 android:textColor="#16A51C"
                 android:textSize="21dp" />
@@ -241,7 +241,7 @@
                 android:layout_height="match_parent"
                 android:layout_marginStart="10dp"
                 android:layout_weight="1"
-                android:fontFamily="sans-serif-light"
+                android:fontFamily="@font/doppio_one"
                 android:text="Email address"
                 android:textColor="#FA1503"
                 android:textSize="21dp" />
@@ -253,7 +253,7 @@
                 android:layout_marginStart="10dp"
                 android:layout_marginBottom="10dp"
                 android:layout_weight="1"
-                android:fontFamily="sans-serif-light"
+                android:fontFamily="@font/doppio_one"
                 android:textColor="#000"
                 android:textSize="18dp" />
 
