--- a/app/src/main/res/layout/fullscreen.xml
+++ b/app/src/main/res/layout/fullscreen.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Photo_Full_Screen">
+    tools:context=".Activities.Photo_Full_Screen">
 
     <ImageView
         android:id="@+id/Profileimage"
@@ -18,13 +18,13 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="35dp"
+        android:layout_width="40dp"
         android:longClickable="true"
         android:clickable="true"
-        android:layout_height="25dp"
+        android:layout_height="40dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_arrow_back2_black_24dp" />
+        app:srcCompat="@drawable/ic_baseline_keyboard_arrow_left_24" />
 </androidx.constraintlayout.widget.ConstraintLayout>
