--- a/app/src/main/res/layout/home.xml
+++ b/app/src/main/res/layout/home.xml
@@ -4,25 +4,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#333"
-    tools:context=".Home_Page">
+    android:background="#fff"
+    tools:context=".Activities.Home_Page">
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/refresh"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginStart="15dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginEnd="15dp"
-        android:layout_marginBottom="71dp">
+        android:layout_above="@id/navigation">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="4dp"
-            android:layout_marginEnd="10dp"
             android:layout_marginBottom="4dp" />
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
@@ -32,8 +26,10 @@
         android:layout_height="70dp"
         android:layout_alignParentBottom="true"
         android:background="@drawable/nav_background"
+        android:elevation="10dp"
         app:itemIconSize="30dp"
         app:itemIconTint="@color/colorPrimary"
         app:itemTextColor="@color/colorPrimary"
         app:menu="@menu/bottom_nav_menu" />
+
 </RelativeLayout>
