--- a/app/src/main/res/layout/login_page.xml
+++ b/app/src/main/res/layout/login_page.xml
@@ -1,26 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/Login"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#222"
+    android:background="#fff"
     android:padding="5dp"
     tools:context=".Login_Details.Login_Page">
 
 
     <ImageView
         android:id="@+id/Logo"
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_width="180dp"
+        android:layout_height="170dp"
         android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
         android:layout_marginStart="5dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="5dp"
-        android:src="@drawable/rentlogo"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:src="@drawable/login" />
 
 
     <RelativeLayout
@@ -39,102 +38,146 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="25dp"
-            android:layout_marginTop="25dp"
-            android:layout_marginBottom="20dp"
-            android:fontFamily="sans-serif-light"
+            android:layout_marginTop="20dp"
+            android:fontFamily="@font/doppio_one"
             android:orientation="horizontal"
-            android:text="Log In"
-            android:textColor="#fff"
-            android:textSize="24sp" />
+            android:text="Welcome back!"
+            android:textColor="#444"
+            android:textSize="26sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/textView15"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/textView14"
+            android:layout_marginStart="25dp"
+            android:layout_marginTop="7dp"
+            android:layout_marginBottom="20dp"
+            android:fontFamily="@font/doppio_one"
+            android:orientation="horizontal"
+            android:text="Log In to your existing account of Rent and Sell"
+            android:textColor="#444"
+            android:textSize="16sp" />
+
 
         <EditText
             android:id="@+id/email1"
             android:layout_width="match_parent"
-            android:layout_height="55dp"
-            android:layout_below="@id/textView14"
+            android:layout_height="60dp"
+            android:layout_below="@id/textView15"
             android:layout_marginStart="25dp"
-            android:layout_marginTop="45dp"
+            android:layout_marginTop="20dp"
             android:layout_marginEnd="25dp"
-            android:background="@drawable/shape4"
+            android:background="@drawable/shape"
+            android:backgroundTint="#EDEDED"
             android:drawableStart="@drawable/ic_email_black_24dp"
+            android:drawablePadding="7dp"
             android:ems="10"
-            android:fontFamily="sans-serif-light"
+            android:elevation=".5dp"
+            android:fontFamily="@font/doppio_one"
             android:hint="Enter your Email"
             android:inputType="textEmailAddress"
             android:paddingStart="10dp"
-            android:textColor="#000"
-            android:textColorHint="#000"
+            android:textColor="#444"
+            android:textColorHint="#444"
             android:textSize="15dp" />
 
         <EditText
             android:id="@+id/password1"
             android:layout_width="match_parent"
-            android:layout_height="55dp"
+            android:layout_height="60dp"
             android:layout_below="@id/email1"
             android:layout_marginStart="25dp"
-            android:layout_marginTop="45dp"
+            android:layout_marginTop="25dp"
             android:layout_marginEnd="25dp"
-            android:background="@drawable/shape4"
+            android:background="@drawable/shape"
+            android:backgroundTint="#EDEDED"
+            android:elevation=".5dp"
             android:drawableStart="@drawable/ic_lock_black_24dp"
+            android:drawablePadding="7dp"
             android:ems="10"
-            android:fontFamily="sans-serif-light"
+            android:fontFamily="@font/doppio_one"
             android:hint="Create a password"
             android:inputType="textPassword"
             android:paddingStart="10dp"
-            android:textColor="#000"
-            android:textColorHint="#000"
+            android:textColor="#444"
+            android:textColorHint="#444"
             android:textSize="15sp" />
 
         <TextView
             android:id="@+id/forgetpassword"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/password1"
+            android:layout_alignParentEnd="true"
             android:layout_marginStart="25dp"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="10dp"
             android:layout_marginEnd="25dp"
+            android:fontFamily="@font/doppio_one"
             android:gravity="end"
             android:linksClickable="true"
-            android:text="Forget Password"
+            android:text="Forget Password ?"
             android:textColor="#2196F3"
-            android:textSize="17dp" />
+            android:textSize="17sp" />
 
         <Button
             android:id="@+id/loginbtn"
             android:layout_width="match_parent"
-            android:layout_height="62dp"
+            android:layout_height="60dp"
             android:layout_below="@id/forgetpassword"
             android:layout_marginStart="25dp"
-            android:layout_marginTop="40dp"
+            android:layout_marginTop="30dp"
             android:layout_marginEnd="25dp"
             android:background="@drawable/shape"
-            android:backgroundTint="#2196F3"
+            android:backgroundTint="#fff"
             android:clickable="false"
             android:drawableStart="@drawable/email"
-            android:drawableTint="#fff"
+            android:drawableTint="@color/colorPrimary"
+            android:elevation="18dp"
+            android:fontFamily="@font/doppio_one"
             android:longClickable="true"
             android:paddingStart="10dp"
             android:paddingEnd="30dp"
             android:text="Log In"
             android:textAllCaps="false"
-            android:textColor="#fff"
-            android:textSize="16dp"
-            android:textStyle="normal" />
+            android:textColor="@color/colorPrimary"
+            android:textSize="18sp" />
 
-
-        <TextView
-            android:id="@+id/creataccount"
-            android:layout_width="match_parent"
-            android:layout_height="60dp"
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_below="@id/loginbtn"
-            android:layout_marginTop="35dp"
-            android:gravity="center"
-            android:text="Create an account"
-            android:textColor="#fff"
-            android:textSize="16sp"
-            android:textStyle="bold" />
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="30dp"
+            android:orientation="horizontal">
 
+            <TextView
+                android:id="@+id/creataccount1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/loginbtn"
+                android:layout_centerHorizontal="true"
+                android:fontFamily="@font/doppio_one"
+                android:gravity="center"
+                android:text="Create an account"
+                android:textColor="#444"
+                android:textSize="18sp" />
+
+            <TextView
+                android:id="@+id/creataccount"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/loginbtn"
+                android:layout_centerHorizontal="true"
+                android:layout_toEndOf="@id/creataccount1"
+                android:layout_marginStart="5dp"
+                android:fontFamily="@font/doppio_one"
+                android:gravity="center"
+                android:text="Sign Up"
+                android:textColor="@color/colorPrimary"
+                android:textSize="18sp" />
+        </LinearLayout>
     </RelativeLayout>
 
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
