--- a/app/src/main/res/layout/sign_up.xml
+++ b/app/src/main/res/layout/sign_up.xml
@@ -1,154 +1,190 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#222"
+    android:background="#fff"
     android:padding="5dp"
+    android:id="@+id/SignUp"
     tools:context=".Login_Details.SignUp_Page">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/signupLayout"
+    <ImageView
+        android:id="@+id/back"
+        android:layout_width="40dp"
+        android:layout_height="45dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="12dp"
+        android:scaleType="centerCrop"
+        android:src="@drawable/ic_baseline_keyboard_arrow_left_24"/>
+
+    <ImageView
+        android:id="@+id/logo"
+        android:layout_width="180dp"
+        android:layout_height="170dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="12dp"
+        android:src="@drawable/signup"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:elevation="0dp"
-        tools:layout_editor_absoluteX="-16dp"
-        tools:layout_editor_absoluteY="-277dp">
+        android:layout_height="wrap_content"
+        android:layout_below="@id/logo">
 
-
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:layout_marginTop="10dp"
-            android:src="@drawable/rentlogo"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <RelativeLayout
+        <TextView
+            android:id="@+id/textView6"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            android:layout_marginStart="25dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="25dp"
+            android:fontFamily="@font/doppio_one"
+            android:text="Register here!"
+            android:textColor="#444"
+            android:textSize="26sp"
+            android:textStyle="bold" />
+
+
+        <TextView
+            android:id="@+id/textView15"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/textView6"
+            android:layout_marginStart="25dp"
+            android:layout_marginTop="7dp"
+            android:layout_marginBottom="20dp"
+            android:fontFamily="@font/doppio_one"
+            android:orientation="horizontal"
+            android:text="Create account to Rent and Sell to get all features"
+            android:textColor="#444"
+            android:textSize="16sp" />
+
+        <EditText
+            android:id="@+id/email1"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:layout_below="@id/textView15"
+            android:layout_marginStart="25dp"
+            android:layout_marginEnd="25dp"
+            android:background="@drawable/shape"
+            android:backgroundTint="#F4F4F4"
+            android:drawableStart="@drawable/ic_email_black_24dp"
+            android:elevation=".5dp"
+            android:ems="10"
+            android:drawablePadding="7dp"
+            android:fontFamily="@font/doppio_one"
+            android:hint="Enter your Email"
+            android:inputType="textEmailAddress"
+            android:paddingStart="10dp"
+            android:textColor="#000"
+            android:textColorHint="#000"
+            android:textSize="15dp" />
+
+        <EditText
+            android:id="@+id/password1"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:layout_below="@id/email1"
+            android:layout_marginStart="25dp"
+            android:layout_marginTop="25dp"
+            android:layout_marginEnd="25dp"
+            android:background="@drawable/shape"
+            android:backgroundTint="#F4F4F4"
+            android:drawableStart="@drawable/ic_lock_black_24dp"
+            android:elevation=".5dp"
+            android:ems="10"
+            android:fontFamily="@font/doppio_one"
+            android:hint="Create a password"
+            android:inputType="textPassword"
+            android:paddingStart="10dp"
+            android:textColor="#000"
+            android:drawablePadding="7dp"
+            android:textColorHint="#000"
+            android:textSize="15dp" />
+
+        <EditText
+            android:id="@+id/phone"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:layout_below="@id/password1"
+            android:layout_marginStart="25dp"
+            android:layout_marginTop="25dp"
+            android:elevation=".5dp"
+            android:layout_marginEnd="25dp"
+            android:background="@drawable/shape"
+            android:backgroundTint="#F4F4F4"
+            android:drawableStart="@drawable/ic_local_phone_black_24dp"
+            android:ems="10"
+            android:drawablePadding="7dp"
+            android:fontFamily="@font/doppio_one"
+            android:hint="Enter your phone number"
+            android:inputType="number"
+            android:paddingStart="10dp"
+            android:textColor="#000"
+            android:textColorHint="#000"
+            android:textSize="15dp" />
+
+        <Button
+            android:id="@+id/signupbtn"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:layout_below="@id/phone"
+            android:layout_gravity="bottom"
+            android:layout_marginStart="25dp"
+            android:layout_marginTop="30dp"
+            android:layout_marginEnd="25dp"
+            android:background="@drawable/shape"
+            android:backgroundTint="#fff"
+            android:clickable="false"
+            android:drawableStart="@drawable/ic_person_add_black_24dp"
+            android:drawableTint="@color/colorPrimary"
+            android:elevation="10dp"
+            android:fontFamily="@font/doppio_one"
+            android:longClickable="true"
+            android:paddingStart="10dp"
+            android:paddingEnd="030dp"
+            android:text="Register"
+            android:textAllCaps="false"
+            android:textColor="@color/colorPrimary"
+            android:textSize="18sp"
+            android:textStyle="normal" />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/signupbtn"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="25dp"
+            android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/textView6"
-                android:layout_width="match_parent"
+                android:id="@+id/signinbtn1"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="25dp"
-                android:layout_marginTop="80dp"
-                android:layout_marginEnd="25dp"
-                android:layout_marginBottom="40dp"
-                android:fontFamily="sans-serif-light"
-                android:text="Sign Up"
-                android:textColor="#fff"
-                android:textSize="24dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.25" />
-
-            <EditText
-                android:id="@+id/email1"
-                android:layout_width="match_parent"
-                android:layout_height="55dp"
-                android:layout_below="@id/textView6"
-                android:layout_marginStart="25dp"
-                android:layout_marginEnd="25dp"
-                android:layout_marginBottom="35dp"
-                android:background="@drawable/shape4"
-                android:drawableStart="@drawable/ic_email_black_24dp"
-                android:ems="10"
-                android:fontFamily="sans-serif-light"
-                android:hint="Enter your Email"
-                android:inputType="textEmailAddress"
-                android:paddingStart="10dp"
-                android:textColor="#000"
-                android:textColorHint="#000"
-                android:textSize="15dp" />
-
-            <EditText
-                android:id="@+id/password1"
-                android:layout_width="match_parent"
-                android:layout_height="55dp"
-                android:layout_below="@id/email1"
-                android:layout_marginStart="25dp"
-                android:layout_marginEnd="25dp"
-                android:layout_marginBottom="35dp"
-                android:background="@drawable/shape4"
-                android:drawableStart="@drawable/ic_lock_black_24dp"
-                android:ems="10"
-                android:fontFamily="sans-serif-light"
-                android:hint="Create a password"
-                android:inputType="textPassword"
-                android:paddingStart="10dp"
-                android:textColor="#000"
-                android:textColorHint="#000"
-                android:textSize="15dp" />
-
-            <EditText
-                android:id="@+id/phone"
-                android:layout_width="match_parent"
-                android:layout_height="55dp"
-                android:layout_below="@id/password1"
-                android:layout_marginStart="25dp"
-                android:layout_marginEnd="25dp"
-                android:layout_marginBottom="35dp"
-                android:background="@drawable/shape4"
-                android:drawableStart="@drawable/ic_local_phone_black_24dp"
-                android:ems="10"
-                android:fontFamily="sans-serif-light"
-                android:hint="Enter your phone number"
-                android:inputType="number"
-                android:paddingStart="10dp"
-                android:textColor="#000"
-                android:textColorHint="#000"
-                android:textSize="15dp" />
-
-            <Button
-                android:id="@+id/signupbtn"
-                android:layout_width="match_parent"
-                android:layout_height="55dp"
-                android:layout_below="@id/phone"
-                android:layout_gravity="bottom"
-                android:layout_marginStart="25dp"
-                android:layout_marginTop="35dp"
-                android:layout_marginEnd="25dp"
-                android:background="@drawable/shape"
-                android:clickable="false"
-                android:drawableStart="@drawable/ic_person_add_black_24dp"
+                android:layout_below="@id/signupbtn"
+                android:layout_centerHorizontal="true"
+                android:fontFamily="@font/doppio_one"
                 android:longClickable="true"
-                android:paddingStart="10dp"
-                android:paddingEnd="030dp"
-                android:text="Register"
+                android:text="Already have an account"
                 android:textAllCaps="false"
-                android:textColor="#fff"
-                android:textSize="16dp"
-                android:textStyle="normal" />
+                android:textColor="#444"
+                android:textSize="18sp" />
 
             <TextView
-                android:id="@+id/loginsignin"
-                android:layout_width="match_parent"
-                android:layout_height="55dp"
+                android:id="@+id/signinbtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_below="@id/signupbtn"
-                android:layout_marginStart="25dp"
-                android:layout_marginTop="25dp"
-                android:layout_marginEnd="25dp"
-                android:layout_marginBottom="5dp"
-                android:background="@drawable/shape"
-                android:backgroundTint="#222"
-                android:fontFamily="sans-serif-light"
-                android:gravity="center"
+                android:layout_centerHorizontal="true"
+                android:fontFamily="@font/doppio_one"
                 android:longClickable="true"
                 android:text="Sign In"
-                android:textAlignment="center"
-                android:textColor="#fff"
-                android:textSize="19dp" />
+                android:layout_marginStart="5dp"
+                android:textAllCaps="false"
+                android:textColor="@color/colorPrimary"
+                android:textSize="18sp" />
+        </LinearLayout>
+    </RelativeLayout>
 
-        </RelativeLayout>
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
