--- a/app/src/main/res/layout/user_ads.xml
+++ b/app/src/main/res/layout/user_ads.xml
@@ -4,16 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#333"
-    tools:context=".User_Ads_Page">
+    android:background="#fff"
+    tools:context=".Activities.User_Ads_Page">
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/refresh"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="15dp"
-        android:layout_marginEnd="15dp"
-        android:layout_marginBottom="72dp">
+        android:layout_above="@id/navigation">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerView"
@@ -38,6 +36,7 @@
         android:background="@drawable/nav_background"
         app:itemIconSize="30dp"
         app:itemIconTint="@color/colorPrimary"
+        android:elevation="10dp"
         app:itemTextColor="@color/colorPrimary"
         app:menu="@menu/bottom_nav_menu" />
 </RelativeLayout>
