--- a/app/src/main/res/layout/user_single_ad_item.xml
+++ b/app/src/main/res/layout/user_single_ad_item.xml
@@ -1,47 +1,74 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/card"
     android:layout_width="match_parent"
-    android:layout_height="150dp"
-    android:layout_margin="10dp"
-    android:background="@drawable/border"
-    android:elevation="10dp"
-    android:orientation="horizontal">
+    android:layout_height="200dp"
+    android:layout_marginStart="15dp"
+    android:layout_marginTop="8dp"
+    android:layout_marginEnd="15dp"
+    android:layout_marginBottom="8dp"
+    android:background="@drawable/shape2"
+    android:elevation="15dp">
+
+    <TextView
+        android:id="@+id/product_name"
+        android:layout_width="match_parent"
+        android:layout_height="35dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
+        android:fontFamily="sans-serif-light"
+        android:text="TextView"
+        android:textAlignment="center"
+        android:textAllCaps="true"
+        android:textColor="#222"
+        android:textSize="22dp"
+        android:textStyle="bold" />
 
     <ImageView
         android:id="@+id/Profileimage"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:layout_alignParentStart="true"
-        android:layout_gravity="center"
-        android:scaleType="centerCrop"
-        android:src="@drawable/ic_baseline_library_books_24" />
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:layout_below="@+id/product_name"
+        android:layout_marginLeft=".5dp"
+        android:layout_marginRight=".5dp"
+        android:scaleType="centerCrop" />
 
-    <LinearLayout
+    <TextView
+        android:id="@+id/product_price"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_toEndOf="@id/Profileimage"
-        android:orientation="vertical">
+        android:layout_below="@+id/Profileimage"
+        android:fontFamily="sans-serif-light"
+        android:text="TextView"
+        android:textAlignment="center"
+        android:textColor="#047062"
+        android:textSize="18dp"
+        android:textStyle="bold" />
 
-        <TextView
-            android:id="@+id/product_name"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:fontFamily="sans-serif"
-            android:padding="10dp"
-            android:text="Ads Name"
-            android:textColor="#000"
-            android:textSize="21sp" />
+    <TextView
+        android:id="@+id/status"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/Profileimage"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="20dp"
+        android:fontFamily="sans-serif-light"
+        android:text="Rent"
+        android:textColor="#4CAF50"
+        android:textSize="21dp"
+        android:textStyle="bold" />
 
-        <TextView
-            android:id="@+id/product_description"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_margin="8dp"
-            android:fontFamily="sans-serif"
-            android:text="Ads Description"
-            android:textColor="#222"
-            android:textSize="18sp" />
-
-    </LinearLayout>
-
+    <TextView
+        android:id="@+id/product_description"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/product_price"
+        android:fontFamily="sans-serif-light"
+        android:padding="5dp"
+        android:paddingStart="20dp"
+        android:paddingBottom="10dp"
+        android:text="TextView"
+        android:textColor="#333"
+        android:textSize="16dp" />
 </RelativeLayout>
