--- a/app/src/main/res/layout/user_update_section.xml
+++ b/app/src/main/res/layout/user_update_section.xml
@@ -1,55 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/UserUpdate"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#888"
-    android:id="@+id/UserUpdate"
-    tools:context=".Post_Ads_Page">
+    android:background="#fff"
+    tools:context=".Activities.Post_Ads_Page">
 
     <Button
         android:id="@+id/button"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@id/button3"
         android:layout_marginStart="24dp"
         android:layout_marginEnd="24dp"
-        android:layout_marginBottom="15dp"
-        android:fontFamily="sans-serif-light"
         android:background="@drawable/shape"
+        android:backgroundTint="#fff"
+        android:elevation="15dp"
+        android:focusable="true"
+        android:fontFamily="@font/doppio_one"
         android:text="Delete Ad"
         android:textAllCaps="false"
-        android:textColor="#fff"
-        android:focusable="true"
+        android:textColor="@color/colorPrimary"
         android:textColorHint="#6D6B6B"
-        android:textSize="18dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.99"
-        tools:ignore="OnClick" />
+        android:textSize="18dp" />
 
     <androidx.cardview.widget.CardView
+        android:id="@id/card"
         android:layout_width="match_parent"
         android:layout_height="140dp"
         android:layout_marginStart="25dp"
-        android:gravity="fill"
-        android:background="@drawable/shape6"
-        android:backgroundTint="#333"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.491"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias=".07"
+        android:layout_marginTop="30dp"
         android:layout_marginEnd="25dp"
+        android:elevation="5dp"
+        android:background="@drawable/shape6"
+        android:backgroundTint="#fff"
+        android:gravity="fill"
         app:cardCornerRadius="4dp">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@drawable/ic_menu_camera">
+            android:background="@drawable/shape">
 
             <ImageView
                 android:id="@+id/imageView7"
@@ -57,119 +50,119 @@
                 android:layout_height="match_parent"
                 android:clickable="true"
                 android:scaleType="fitXY"
-                app:srcCompat="@drawable/ic_menu_camera" />
+                app:srcCompat="@drawable/download" />
         </LinearLayout>
     </androidx.cardview.widget.CardView>
+
     <EditText
         android:id="@+id/textView9"
-        android:layout_width="0dp"
-        android:fontFamily="sans-serif-light"
-        android:layout_height="40dp"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:layout_below="@id/card"
         android:layout_marginStart="25dp"
+        android:layout_marginTop="35dp"
         android:layout_marginEnd="25dp"
-        android:layout_marginBottom="30dp"
         android:background="@drawable/shape6"
-        android:backgroundTint="#222"
+        android:backgroundTint="#EDEDED"
+        android:elevation=".5dp"
+        android:fontFamily="@font/doppio_one"
         android:hint="Product name"
-        android:layout_marginTop="30dp"
         android:inputType="textPersonName"
         android:paddingStart="10dp"
         android:textAlignment="textStart"
-        android:textColor="#fff"
-        android:textColorHint="#fff"
-        android:textSize="18dp"
-        app:layout_constraintBottom_toTopOf="@+id/textView10"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout8"
-        app:layout_constraintVertical_bias="0.458" />
+        android:textColor="#444"
+        android:textColorHint="#444"
+        android:textSize="18dp" />
 
     <EditText
         android:id="@+id/textView3"
-        android:layout_width="0dp"
+        android:layout_width="150dp"
         android:layout_height="36dp"
-        android:layout_marginStart="25dp"
+        android:layout_below="@id/textView10"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="25dp"
         android:background="@drawable/shape6"
-        android:backgroundTint="#222"
+        android:backgroundTint="#EDEDED"
+        android:elevation=".5dp"
+        android:fontFamily="@font/doppio_one"
         android:hint="Enter Price"
-        android:fontFamily="sans-serif-light"
         android:inputType="numberDecimal"
         android:paddingStart="10dp"
-        android:textColor="#fff"
-        android:textColorHint="#fff"
-        android:textSize="17dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/switch1"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.717" />
+        android:textColor="#444"
+        android:textColorHint="#444"
+        android:textSize="17dp" />
 
     <Button
         android:id="@+id/button3"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@id/textView8"
         android:layout_marginStart="24dp"
+        android:layout_marginTop="30dp"
         android:layout_marginEnd="24dp"
-        android:layout_marginBottom="40dp"
+        android:layout_marginBottom="30dp"
         android:background="@drawable/shape"
-        android:text="Update"
+        android:backgroundTint="#fff"
+        android:elevation="15dp"
         android:focusable="true"
+        android:fontFamily="@font/doppio_one"
+        android:text="Update"
         android:textAllCaps="false"
-        android:textColor="#fff"
+        android:textColor="@color/colorPrimary"
         android:textColorHint="#6D6B6B"
-        android:textSize="18dp"
-        android:fontFamily="sans-serif-light"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.905"
-        tools:ignore="OnClick" />
+        android:textSize="18dp" />
 
 
     <EditText
         android:id="@+id/textView10"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="90dp"
+        android:layout_below="@id/textView9"
         android:layout_marginStart="25dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="25dp"
         android:background="@drawable/shape6"
-        android:backgroundTint="#222"
+        android:backgroundTint="#EDEDED"
+        android:elevation=".5dp"
+        android:fontFamily="@font/doppio_one"
         android:gravity="top"
         android:hint="Product Description"
         android:paddingStart="10dp"
-        android:textColor="#fff"
-        android:textColorHint="#fff"
-        android:textSize="18dp"
-        android:fontFamily="sans-serif-light"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.567" />
+        android:textColor="#444"
+        android:textColorHint="#444"
+        android:textSize="18dp" />
 
     <EditText
         android:id="@+id/switch1"
         android:layout_width="155dp"
         android:layout_height="036dp"
+        android:layout_below="@id/textView10"
         android:layout_marginStart="25dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="25dp"
         android:background="@drawable/shape6"
-        android:backgroundTint="#222"
+        android:backgroundTint="#EDEDED"
+        android:elevation=".5dp"
+        android:fontFamily="@font/doppio_one"
         android:hint="Rent/Sell"
         android:paddingStart="10dp"
-        android:textColor="#fff"
-        android:textColorHint="#fff"
-        android:fontFamily="sans-serif-light"
-        android:textSize="17dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/textView3"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.719" />
+        android:textColor="#444"
+        android:textColorHint="#444"
+        android:textSize="17dp" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <TextView
+        android:id="@+id/textView8"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/switch1"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="26dp"
+        android:fontFamily="@font/doppio_one"
+        android:text="Enter renting price"
+        android:textColor="#444"
+        android:textSize="16sp" />
+
+
+</RelativeLayout>
