--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,19 +6,23 @@
         <item name="colorPrimary">#FFFFFF</item>
         <item name="colorPrimaryDark">#2196F3</item>
         <item name="colorAccent">#2196F3</item>
-        <item name="android:fontFamily">sans-serif-light</item>
+        <item name="android:fontFamily">@font/doppio_one</item>
+        <item name="android:colorFocusedHighlight">#2196F3</item>
 
     </style>
      
     <style name="TextAppearance.AppCompat.Widget.ActionBar.Title" parent="@android:style/TextAppearance">
         <item name="android:textSize">21dp</item>
-        <item name="android:fontFamily">sans-serif-light</item>
+        <item name="android:fontFamily">@font/doppio_one</item>
         <item name="android:textColor">#2196F3</item>
+        <item name="android:colorActivatedHighlight">#2196F3</item>
+        <item name="android:colorFocusedHighlight">#2196F3</item>
     </style>
     <style name="login" parent="Theme.AppCompat.NoActionBar">
         <item name="colorPrimary">#2196F3</item>
-        <item name="android:fontFamily">sans-serif-light</item>
+        <item name="android:fontFamily">@font/doppio_one</item>
         <item name="colorPrimaryDark">#2196F3</item>
         <item name="colorAccent">#2196F3</item>
+        <item name="android:colorFocusedHighlight">#2196F3</item>
     </style>
 </resources>
